--- a/app/views/messages/splash.html.erb
+++ b/app/views/messages/splash.html.erb
@@ -18,4 +18,26 @@
           <br>
           Please Share Helping Chat as you might be able to help someone that needs to chat about whats currently going though their mind!
     </p>
+    <p class="splash-info-mobile">
+       Hello and Welcome to Helping Chat.
+       <br>
+       <br>
+       I hope that your feeling happy but if your not don't worry just jump into a chat and you can talk about your problem and also help someone with theirs.
+       <br>
+       <br>
+       Please Remeber to be kind and follow the rules that are provided here.
+       <br>
+       <br>
+       If you have any  feedback about the website please tweet me or email me.
+       <br>
+       Twitter: <a href="https://www.twitter.com/robertwildman">@Robertwildman</a>.
+       <br>
+       Email: <a href="mailto:robertwildman@helpingchat.com?subject=Website Feedback">robertwildman@helpingchat.com</a>.
+       <br>
+       <br>
+       Please Share Helping Chat as you might be able to help someone that needs to chat about whats currently going though their mind!
+    </p>
+   <form action="/chat">
+    <input type="submit" class ="btn btn-large"value="Enter Helping Chat">
+  </form>
 </div>
