--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -2,35 +2,77 @@
 	margin: 0 auto;
 	float:none;
 }
-.left-option
-{
-    width:90%;
-    margin: 0 auto;
-    padding-left: 2px;
-    padding-right: 2px;
-}
-.chat-body
-{
-    height: 100%;
-    margin-top:10px;
-}
 
-.right-option
-{
-    width:100%;
-    height:100%;
-}
+
+/* This is for the left side */
 .left-option-link
 {
     font-style: none;
     text-decoration: none;
-    color: white;
+    color: black;
 }
 .left-option-link:hover
 {
     font-style: none;
     text-decoration: none;
-    color: whitesmoke;
+    color: black;
+}
+
+.left-list
+{
+    list-style-type:none;
+    text-align: left;
+    padding-left: 0px;
+    border:2px solid gray;
+    border-left: none;
+    border-top: none;
+}
+.left-list-item
+{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    border:1px solid gray;
+    border-left: none;
+    border-right: none;
+    border-top: none;
+}
+.item-last
+{
+    border-bottom: none;
+}
+.item-header
+{
+    padding-top: 0px;
+    border-top: none;
+    padding-bottom: 0px;
+    text-align: center;
+    padding-left: 0px;
+}
+
+/* This is for the chat */
+.chat-header
+{
+    color:black;
+    height: 61px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width:100%;
+    text-align: left;
+    border: 1px solid gray;
+    border-top: none;
+}
+.chat-header-text
+{
+    font-weight: 300;
+    padding-left: 20px;
+    float: left;
+    font-size: x-large;
+}
+.chat-body
+{
+    height: 100%;
+    margin-top:10px;
 }
 .chat-footer
 {
@@ -44,29 +86,30 @@
     background-color: whitesmoke;
     left:0;
 }
+.start-chat-button
+{
+    margin-top: 5px;
+    margin-right: 15px;
+    font-weight: 100;
+    font-size: 1.5em;
+    color:white;
+    white-space: normal;
+}
 .chat-input-div
 {
     height:100%;
 }
+
+
 .pull-left
 {
     float:left;
 }
 .maincontainer
 {
-    margin-top: -10px;
     width:100%;
     display:block;
     height:100%;
-    background-color: whitesmoke;
-}
-.left-option-body
-{
-    margin: 0 auto;
-    background-color: cadetblue;
-    color:white;
-    padding-top: 5px;
-    padding-bottom: 5px;
 }
 .chat_message
 {
@@ -90,31 +133,6 @@
     width: 60%;
     position:relative;
     height:100%;
-    border-radius: 10px;
-    border: 20px solid cadetblue;
-    background-color: white;
-    border-top: 0px;
-}
-.navbar
-{
-   background-color: white;
-   color: #FFAE19;
-   text-align: center;
-}
-.navbar-header
-{
-   background-color: whitesmoke;
-   color: #FFAE19;
-   float:none;
-}
-.navbar-default
-{
-    color:#fb8521;
-}
-.navbar
-{
-    background-color: whitesmoke;
-    border: none;
 }
 .brand
 {
@@ -123,45 +141,13 @@
     float:none;
     color: #fb8521 !important;
 }
-.nav-link{
 
-    color:white;
-}
-.mastfoot
-{
-	max-width: 400px;
-	text-align: center;
-}
 .model
 {
     position: relative;
 }
-.left-option-head
-{
-    background-color: cadetblue;
-    color:white;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-.chat-header
-{
-    background-color: cadetblue;
-    color:white;
-    height: 10%;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    width:100%;
-}
-.chat-header-text
-{
-    float: left;
-    font-weight: 200;
-    font-size: x-large;
-}
-.left-info
-{
-    margin-bottom: 20px;
-}
+
+
 .chat_message
 {
     border-top-left-radius:10px;
@@ -172,13 +158,6 @@
     width:80%
 }
 
-.right-welcome-head
-{
-    background-color: #fb8521;
-    color:white;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
 .modal-header
 {
     color: #fb8521;
@@ -197,15 +176,7 @@
     padding:5px;
     white-space: normal;
 }
-.start-chat-button
-{
-    margin-top: 5px;
-    background-color: #fb8521;
-    font-weight: 100;
-    font-size: 1.5em;
-    color:white;
-    white-space: normal;
-}
+
 .close
 {
     font-size: 30px;
@@ -221,11 +192,6 @@
 .panel-heading
 {
     height: 60px;
-}
-.nav-link
-{
-    cursor: pointer;
-    cursor: hand;
 }
 .modal-splash-button
 {
@@ -253,13 +219,12 @@ body
 {
     height: 98%;
     font-family: 'Roboto', sans-serif;
-    padding-top: 70px;
-    background-color:whitesmoke;
 }
 .h4 , h4
 {
     font-family: 'Roboto', sans-serif;
-    font-weight: 400;
+    font-weight: 200;
+    font-size: medium;
 }
 .maincontainer
 {
@@ -540,15 +505,9 @@ top: 70%;
 body
 {
     height:100%;
-    width:100%;
-    background-color: transparent;
+    width:100%
 }
 html {
-  background: url(/assets/splash2.jpeg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
   height:100%;
   width:100%;
 }
