--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -35,7 +35,7 @@
 .chat-footer
 {
     width:100%;
-    height:15%;
+    height:80px;
     padding-left: 5px;
     padding-right: 5px;
     padding-bottom: 5px;
@@ -84,6 +84,7 @@
     float: right;
     width: 15%;
     height:90%;
+    margin-top: -80px;
 }
 .column-center{
     display: inline-block;
@@ -99,13 +100,19 @@
 {
    background-color: white;
    color: #FFAE19;
-   text-align: center;
 }
 .navbar-header
 {
    background-color: whitesmoke;
    color: #FFAE19;
    float:none;
+}
+.navbar-brand
+{
+    color:white;
+    margin: 0 auto;
+    font-size: 10;
+    padding-left:45%;
 }
 .navbar-default
 {
@@ -120,7 +127,6 @@
 {
     font-family: 'Comfortaa', cursive;
     font-size: 35px;
-    float:none;
     color: #fb8521 !important;
 }
 .nav-link{
@@ -147,7 +153,7 @@
 {
     background-color: cadetblue;
     color:white;
-    height: 10%;
+    height: 60px;
     padding-top: 5px;
     padding-bottom: 5px;
     width:100%;
@@ -270,7 +276,7 @@ body
 {
     overflow:hidden;
     overflow-y:auto;
-    height: 70%;
+    max-height: 345px;
 }
 #yourinfo
 {
@@ -329,29 +335,12 @@ body
   color:white;
   display: table;
   clear: both;
-  margin-top: 5px;
 }
 
 .bubble p {
   display: table-cell;
   vertical-align: middle;
   text-align: left;
-}
-.helpingchatbubble
-{
-position: relative;
-width: 555px;
-min-height:35px;
-padding: 4px;
-font-size: large;
-font-weight: 300;
-margin-left: auto;
-margin-right: auto;
-color:#fb8521;
-background: #F5F5F5;
--webkit-border-radius: 0px;
--moz-border-radius: 0px;
-border-radius: 0px;
 }
 .yourbubble
 {
@@ -406,7 +395,7 @@ width: 0;
 z-index: 1;
 margin-top: -10px;
 left: -20px;
-top: 70%;
+top: 81%;
 }
 
 
@@ -485,13 +474,9 @@ top: 70%;
         height:100%;
         border: solid 1px #cccccc;
     }
-    .model
+        .model
     {
         position: relative;
-    }
-    .brand
-    {
-        float:left;
     }
      .navbar-fixed-top {
         position: absolute;
@@ -536,19 +521,4 @@ top: 70%;
     background-color: white;
 }
 
-}
-body
-{
-    height:100%;
-    width:100%;
-    background-color: transparent;
-}
-html {
-  background: url(/assets/splash2.jpeg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  height:100%;
-  width:100%;
 }
