--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, 'About us') %>
+<%= stylesheet_link_tag "about" %>
 <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300' rel='stylesheet' type='text/css'>
 <div class="site-wrapper">
 
