--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -9,28 +9,10 @@
     padding-left: 2px;
     padding-right: 2px;
 }
-.chat-body
-{
-    height: 100%;
-    margin-top:10px;
-}
-
 .right-option
 {
     width:100%;
     height:100%;
-}
-.left-option-link
-{
-    font-style: none;
-    text-decoration: none;
-    color: white;
-}
-.left-option-link:hover
-{
-    font-style: none;
-    text-decoration: none;
-    color: whitesmoke;
 }
 .chat-footer
 {
@@ -62,11 +44,7 @@
 }
 .left-option-body
 {
-    margin: 0 auto;
-    background-color: cadetblue;
-    color:white;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    display:none;
 }
 .chat_message
 {
@@ -82,19 +60,21 @@
 }
 .column-right{
     float: right;
-    width: 15%;
-    height:90%;
-    margin-top: -80px;
+    width: 10%;
+    height:100%;
 }
 .column-center{
     display: inline-block;
-    width: 60%;
+    width: 65%;
     position:relative;
     height:100%;
     border-radius: 10px;
     border: 20px solid cadetblue;
     background-color: white;
-    border-top: 0px;
+}
+.adsbygoogle
+{
+    margin-top: 20px;
 }
 .navbar
 {
@@ -144,7 +124,7 @@
 }
 .left-option-head
 {
-    background-color: cadetblue;
+    background-color: #fb8521;
     color:white;
     padding-top: 5px;
     padding-bottom: 5px;
@@ -153,20 +133,21 @@
 {
     background-color: cadetblue;
     color:white;
-    height: 60px;
     padding-top: 5px;
     padding-bottom: 5px;
     width:100%;
 }
 .chat-header-text
 {
-    float: left;
-    font-weight: 200;
-    font-size: x-large;
+    max-width: 250px;
 }
 .left-info
 {
     margin-bottom: 20px;
+}
+.right-info
+{
+    margin-top: 25%;
 }
 .chat_message
 {
@@ -175,7 +156,7 @@
     border-bottom-left-radius:10px;
     border-bottom-right-radius:10px;
     border:1px solid gray;
-    width:80%
+    width:69%
 }
 
 .right-welcome-head
@@ -187,8 +168,8 @@
 }
 .modal-header
 {
-    color: #fb8521;
-    background-color:whitesmoke;
+    background-color: #fb8521;
+    color:white;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
@@ -201,20 +182,6 @@
     font-size: 1.5em;
     color:white;
     padding:5px;
-    white-space: normal;
-}
-.start-chat-button
-{
-    margin-top: 5px;
-    background-color: #fb8521;
-    font-weight: 100;
-    font-size: 1.5em;
-    color:white;
-    white-space: normal;
-}
-.close
-{
-    font-size: 30px;
 }
 .lightcoral
 {
@@ -240,11 +207,6 @@
     cursor: hand;
     margin-left: 20px;
 }
-.modal-title
-{
-  font-family: 'Comfortaa', cursive;
-  font-size: 23px;
-}
 .modal-spalsh-buttongroup
 {
     margin: 0 auto;
@@ -265,7 +227,7 @@ body
 .h4 , h4
 {
     font-family: 'Roboto', sans-serif;
-    font-weight: 400;
+    font-weight: 300;
 }
 .maincontainer
 {
@@ -276,7 +238,7 @@ body
 {
     overflow:hidden;
     overflow-y:auto;
-    max-height: 345px;
+    max-height: 300px;
 }
 #yourinfo
 {
@@ -329,74 +291,7 @@ body
     margin: 0 auto;
     float:none;
 }
-/* Bubble Code */
-.bubble {
-  position: absolute;
-  color:white;
-  display: table;
-  clear: both;
-}
 
-.bubble p {
-  display: table-cell;
-  vertical-align: middle;
-  text-align: left;
-}
-.yourbubble
-{
-position: relative;
-max-width: 300px;
-height: 35px;
-padding: 8px;
-margin-right: 15px;
-background: #00BE00;
--webkit-border-radius: 0px;
--moz-border-radius: 0px;
-border-radius: 0px;
-}
-
-.yourbubble:after
-{
-content: '';
-position: absolute;
-border-style: solid;
-border-width: 10px 0 10px 20px;
-border-color: transparent #00BE00;
-display: block;
-width: 0;
-z-index: 1;
-margin-top: -10px;
-right: -20px;
-top: 70%;
-}
-
-.theirbubble
-{
-position: relative;
-max-width: 300px;
-height: 35px;
-margin-left: 15px;
-padding: 8px;
-background: #274BFF;
--webkit-border-radius: 0px;
--moz-border-radius: 0px;
-border-radius: 0px;
-}
-
-.theirbubble:after
-{
-content: '';
-position: absolute;
-border-style: solid;
-border-width: 10px 20px 10px 0;
-border-color: transparent #274BFF;
-display: block;
-width: 0;
-z-index: 1;
-margin-top: -10px;
-left: -20px;
-top: 81%;
-}
 
 
 @media(min-width:768px) {
@@ -458,16 +353,6 @@ top: 81%;
     .column-right{
        display:none;
     }
-    .chat-button
-    {
-        width:22%;
-        padding-left: 1px;
-        padding-right: 1px;
-    }
-    .chat_message
-    {
-        width:77%;
-    }
     .column-center{
         display: inline-block;
         width: 100%;
@@ -506,19 +391,5 @@ top: 81%;
     {
         width: 800px;
     }
-    .column-right{
-    float: right;
-    width: 10%;
-    height:100%;
-}
-.column-center{
-    display: inline-block;
-    width: 65%;
-    position:relative;
-    height:100%;
-    border-radius: 10px;
-    border: 20px solid cadetblue;
-    background-color: white;
-}
 
 }
