--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -46,12 +46,12 @@
   <div class="column-center">
     <div class="chat-header">
       <h4 class="chat-header-text">You are chatting to: </h4>
+      <input type="button" id="messagesend" class="btn endchat-btn lightcoral" value="Start Chatting" />
     </div>
     <div class="chat-footer">
         <div class="chat-input-div">
-        <input type="button" id="messagesend" class="btn chat-button lightcoral pull-left" value="Start Chatting" />
-        <textarea id="messagetextinput" class="message chat_message"> </textarea>
-        <input type="button" id="messagesend" class="btn chat-button  cadetblue pull-right " value="Send" />
+          <textarea id="messagetextinput" class="message chat_message"> </textarea>
+          <input type="button" id="messagesend" class="btn chat-button  cadetblue pull-right " value="Send" />
         </div>
     </div>
   </div>
@@ -60,77 +60,31 @@
       <div class = "left-option-head ">
         <h4>Other Places for Advice <span class="caret"></span></h4>
       </div>
-      <div class ="left-option-body">
-
-      </div>
-    </div>
-
-    <div class ="left-option">
-      <div class = "left-option-head ">
-        <h4>Rules <span class="caret"></span></h4>
-      </div>
-      <div class ="left-option-body">
-
-      </div>
     </div>
 
     <div class ="left-option">
       <div class = "left-option-head ">
         <h4>Starting Questions <span class="caret"></span></h4>
       </div>
-      <div class ="left-option-body">
-
-      </div>
     </div>
 
     <div class ="left-option">
       <div class = "left-option-head ">
-        <h4>About Us <span class="caret"></span></h4>
+        <h4>About Helping Chat <span class="caret"></span></h4>
       </div>
-      <div class ="left-option-body">
-          <p>
-        Helping Chat is a simple website to allow people with an issue to chat the issue out with someone else with an issue maybe like there may complete different and you together you will help each other with your own advice and expertice.
-      </p>
-      </div>
-
     </div>
     <div class ="left-option">
      <div class = "left-option-head ">
-        <h4>Contact Us <span class="caret"></span></h4>
-      </div>
-      <div class ="left-option-body">
-
+        <h4>Contact Helping Chat <span class="caret"></span></h4>
       </div>
     </div>
     <div class ="left-option">
      <div class = "left-option-head ">
         <h4>Share Helping Chat <span class="caret"></span></h4>
       </div>
-      <div class ="left-option-body">
-
-      </div>
-    </div>
-
-    <div class ="left-option">
-     <div class = "left-option-head ">
-        <h4>Edit Your Information <span class="caret"></span></h4>
-      </div>
-      <div class ="left-option-body">
-
-      </div>
-    </div>
-
-    <div class ="left-option">
-     <div class = "left-option-head ">
-        <h4>View Connected User <span class="caret"></span></h4>
-      </div>
-      <div class ="left-option-body">
-
-      </div>
     </div>
   </div>
   <div class = "column-right">
-
     <div class = "right-info">
       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <!-- Chat Lower -->
