Adding Profile Picture Picker

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -304,3 +304,84 @@
 </div>
 
 
+<!-- Pick Profile Picture Modal-->
+<div class="modal fade" id="Pickprofilepic" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal modal-left">
+      <div class="modal-content">
+          <div class="modal-header pick-header">
+            <h4 class="modal-title pick-title" >Current Profile Picture</h4>
+          </div>
+          <div class="modal-body text-center">
+            <div class="pickcircle pickicon_controller pickcolor_red" id="currentprofilepicture">
+
+            </div>
+          </div>
+      </div>
+    </div>
+    <div class="modal-content">
+      <div class="modal-header pick-header">
+        <h4 class="modal-title pick-title" >Please Pick A Profile Picture</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      </div>
+      <div class="modal-body">
+        <div class="pickboxmain icon">
+            <h5 class="icontext">Pick a Icon: </h5>
+            <div class="pickbox">
+              <div class="center">
+                 <div class="pickcircle pickiconcircle pickiconselected"  id ="pickicon_controller">
+                  </div>
+                  <div class="pickcircle pickiconcircle" id ="pickicon_mic">
+                  </div>
+                  <div class="pickcircle pickiconcircle" id ="pickicon_heart">
+                  </div>
+                  <div class="pickcircle pickiconcircle" id ="pickicon_star">
+                  </div>
+                  <div class="pickcircle pickiconcircle" id ="pickicon_lightbulb">
+                  </div>
+                  <div class="pickcircle pickiconcircle" id ="pickicon_face">
+                  </div>
+                  <div class="pickcircle pickiconcircle" id ="pickicon_cupcake">
+                  </div>
+                  <div class="pickcircle pickiconcircle" id ="pickicon_zen">
+                  </div>
+                  <div class="pickcircle pickiconcircle" id ="pickicon_football">
+                  </div>
+                  <div class="pickcircle pickiconcircle" id ="pickicon_paw">
+                  </div>
+                </div>
+            </div>
+        </div>
+        <div class="pickboxmain icon">
+            <h5 class="icontext">Pick a Background Color: </h5>
+            <div class="pickbox">
+                  <div class="pickcircle pickcolorcircle pickcolorselected" id ="pickcolor_red">
+                  </div>
+                  <div class="pickcircle pickcolorcircle" id ="pickcolor_pink">
+                  </div>
+                  <div class="pickcircle pickcolorcircle" id ="pickcolor_purple">
+                  </div>
+                  <div class="pickcircle pickcolorcircle" id ="pickcolor_indigo">
+                  </div>
+                  <div class="pickcircle pickcolorcircle" id ="pickcolor_blue">
+                  </div>
+                  <div class="pickcircle pickcolorcircle" id ="pickcolor_cyan">
+                  </div>
+                  <div class="pickcircle pickcolorcircle" id ="pickcolor_teal">
+                  </div>
+                  <div class="pickcircle pickcolorcircle" id ="pickcolor_lightgreen">
+                  </div>
+                  <div class="pickcircle pickcolorcircle" id ="pickcolor_yellow">
+                  </div>
+                  <div class="pickcircle pickcolorcircle" id ="pickcolor_orange">
+                  </div>
+            </div>
+        </div>
+
+
+
+      </div>
+    </div>
+  </div>
+</div>
+
