--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -1,3 +1,302 @@
+/* Default Modal */
+.modal-header
+{
+    background-color: #fb8521;
+    color:white;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+.modal-left
+{
+  width: 400px;
+  height: 300px;
+  float: left;
+  display: block;
+  margin-left: -60%;
+}
+.text-center
+{
+    text-align: center;
+}
+/* This is for the Pick Profile Modal */
+.pickbox
+{
+    width: 85%;
+    text-align: center;
+    height: 270px;
+    text-align: center;
+    padding-top: 20px;
+    margin: 0 auto;
+}
+.pickcircle
+{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    display: inline-block;
+    margin-left: 10px;
+    background-color: whitesmoke;
+}
+.pickiconselected
+{
+    border:4px solid #0288D1;
+}
+.pickcolorselected
+{
+    border:4px solid #0288D1;
+}
+.pickcolorcircle:hover
+{
+    border:4px solid black;
+}
+.pickiconcircle:hover
+{
+    border:2px solid #0288D1;
+}
+.pickboxmain
+{
+
+}
+.pickprofilepic
+{
+
+}
+.pick-header
+{
+    background-color: #3949AB;
+}
+.pick-title
+{
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: x-large;
+    font-weight: 100;
+}
+.icontext
+{
+    font-family: 'Roboto', sans-serif;
+    font-size: medium;
+    font-weight: 300;
+    margin-top: -10px;
+    float: left;
+    border-bottom: 1px solid #9E9E9E;
+}
+/* Colors and Icons for profile */
+#pickcolor_red
+{
+    background-color: #F44336;
+}
+#pickcolor_pink
+{
+    background-color: #E91E63;
+}
+#pickcolor_purple
+{
+    background-color: #9C27B0;
+}
+#pickcolor_indigo
+{
+    background-color: #3F51B5;
+}
+#pickcolor_blue
+{
+    background-color: #2196F3;
+}
+#pickcolor_cyan
+{
+    background-color: #00BCD4;
+}
+#pickcolor_lightgreen
+{
+    background-color: #8BC34A;
+}
+#pickcolor_teal
+{
+    background-color: #009688;
+}
+#pickcolor_yellow
+{
+    background-color: #FFEB3B;
+}
+#pickcolor_orange
+{
+    background-color: #FF9800;
+}
+
+#pickicon_controller
+{
+    background-color: #F5F5F5;
+    background-image: url(/assets/controller.png);
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+}
+#pickicon_mic
+{
+    background-color: #F5F5F5;
+    background-image: url(/assets/mic.png);
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+}
+#pickicon_heart
+{
+    background-color: #F5F5F5;
+    background-image: url(/assets/heart.png);
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+}
+#pickicon_star
+{
+    background-color: #F5F5F5;
+    background-image: url(/assets/star.png);
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+}
+#pickicon_lightbulb
+{
+    background-color: #F5F5F5;
+    background-image: url(/assets/lightbulb.png);
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+}
+#pickicon_face
+{
+    background-color: #F5F5F5;
+    background-image: url(/assets/face.png);
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+}
+#pickicon_cupcake
+{
+    background-color: #F5F5F5;
+    background-image: url(/assets/cupcake.png);
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+}
+#pickicon_zen
+{
+    background-color: #F5F5F5;
+    background-image: url(/assets/zen.png);
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+}
+#pickicon_football
+{
+    background-color: #F5F5F5;
+    background-image: url(/assets/football.png);
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+}
+#pickicon_paw
+{
+    background-color: #F5F5F5;
+    background-image: url(/assets/paw.png);
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+}
+
+.pickcolor_red
+{
+    background-color: #F44336;
+}
+.pickcolor_pink
+{
+    background-color: #E91E63;
+}
+.pickcolor_purple
+{
+    background-color: #9C27B0;
+}
+.pickcolor_indigo
+{
+    background-color: #3F51B5;
+}
+.pickcolor_blue
+{
+    background-color: #2196F3;
+}
+.pickcolor_cyan
+{
+    background-color: #00BCD4;
+}
+.pickcolor_lightgreen
+{
+    background-color: #8BC34A;
+}
+.pickcolor_teal
+{
+    background-color: #009688;
+}
+.pickcolor_yellow
+{
+    background-color: #FFEB3B;
+}
+.pickcolor_orange
+{
+    background-color: #FF9800;
+}
+
+.pickicon_controller
+{
+    background-image: url(/assets/controller.png);
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+}
+.pickicon_mic
+{
+    background-image: url(/assets/mic.png);
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+}
+.pickicon_heart
+{
+    background-image: url(/assets/heart.png);
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+}
+.pickicon_star
+{
+    background-image: url(/assets/star.png);
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+}
+.pickicon_lightbulb
+{
+    background-image: url(/assets/lightbulb.png);
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+}
+.pickicon_face
+{
+    background-image: url(/assets/face.png);
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+}
+.pickicon_cupcake
+{
+    background-image: url(/assets/cupcake.png);
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+}
+.pickicon_zen
+{
+    background-image: url(/assets/zen.png);
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+}
+.pickicon_football
+{
+    background-image: url(/assets/football.png);
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+}
+.pickicon_paw
+{
+    background-image: url(/assets/paw.png);
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+}
+
+
 .center{
 	margin: 0 auto;
 	float:none;
@@ -176,13 +475,6 @@
     color:white;
     padding-top: 5px;
     padding-bottom: 5px;
-}
-.modal-header
-{
-    background-color: #fb8521;
-    color:white;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
 }
 .chat-button
 {
