--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -35,15 +35,15 @@
     border-radius: 50%;
     display: inline-block;
     margin-left: 10px;
-    background-color: whitesmoke;
+    background-color: #f5f5f5;
 }
 .pickiconselected
 {
-    border:4px solid #0288D1;
+    border:4px solid black;
 }
 .pickcolorselected
 {
-    border:4px solid #0288D1;
+    border:4px solid black;
 }
 .pickcolorcircle:hover
 {
@@ -51,7 +51,7 @@
 }
 .pickiconcircle:hover
 {
-    border:2px solid #0288D1;
+    border:4px solid black;
 }
 .pickboxmain
 {
@@ -125,70 +125,60 @@
 
 #pickicon_controller
 {
-    background-color: #F5F5F5;
     background-image: url(/assets/controller.png);
     background-position:50% 50%;
     background-repeat:no-repeat;
 }
 #pickicon_mic
 {
-    background-color: #F5F5F5;
     background-image: url(/assets/mic.png);
     background-position:50% 50%;
     background-repeat:no-repeat;
 }
 #pickicon_heart
 {
-    background-color: #F5F5F5;
     background-image: url(/assets/heart.png);
     background-position:50% 50%;
     background-repeat:no-repeat;
 }
 #pickicon_star
 {
-    background-color: #F5F5F5;
     background-image: url(/assets/star.png);
     background-position:50% 50%;
     background-repeat:no-repeat;
 }
 #pickicon_lightbulb
 {
-    background-color: #F5F5F5;
     background-image: url(/assets/lightbulb.png);
     background-position:50% 50%;
     background-repeat:no-repeat;
 }
 #pickicon_face
 {
-    background-color: #F5F5F5;
     background-image: url(/assets/face.png);
     background-position:50% 50%;
     background-repeat:no-repeat;
 }
 #pickicon_cupcake
 {
-    background-color: #F5F5F5;
     background-image: url(/assets/cupcake.png);
     background-position:50% 50%;
     background-repeat:no-repeat;
 }
 #pickicon_zen
 {
-    background-color: #F5F5F5;
     background-image: url(/assets/zen.png);
     background-position:50% 50%;
     background-repeat:no-repeat;
 }
 #pickicon_football
 {
-    background-color: #F5F5F5;
     background-image: url(/assets/football.png);
     background-position:50% 50%;
     background-repeat:no-repeat;
 }
 #pickicon_paw
 {
-    background-color: #F5F5F5;
     background-image: url(/assets/paw.png);
     background-position:50% 50%;
     background-repeat:no-repeat;
