--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -364,9 +364,7 @@
                   </div>
             </div>
         </div>
-
-
-
+      <input type="button" id="saveprofilepicture" class="btn save-pic-btn pull-right" value="Save Profile Picture >" />
       </div>
     </div>
   </div>
