--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -23,7 +23,6 @@
     socket.emit('switchRoom', room);
   }
 </script>
-
 <div class="header">
   <div class="header-left">
     <div class="header-profile pickcolor_red pickicon_controller">
@@ -56,6 +55,11 @@
     </div>
   </div>
   <div class="column-left">
+    <div class="top-left">
+        <div class="yourprofilecircle pickcircle pickcolorcircle pickcolor_blue">
+        </div>
+        <p class = "brand left-brand"> Helping Chat </p>
+    </div>
     <div class ="left-option top-option">
       <div class = "left-option-head ">
         <h4>Other Places for Advice <span class="caret"></span></h4>
